deployment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Deployment
metadata:
    name: nginx-ingress-controller
spec:
    replicas: 1
    selector:
        matchLabels:
            name: nginx-ingress
    template:
        metadata:
            labels:
                name: nginx-ingress
        spec:
            containers:
                - name: nginx-ingress-controller
                  image: quay.io/kubernets-ingress-controller/nginx-ingress-controller:0.21.0
            args:
                - /nginx-ingress=controller
                - --configmap=$(POD_NAMESPACE)/nginx-configuration
            ports:
                - name: http
                  containerPort: 80
                - name: https
                  containerPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appweb1
spec:
  replicas: 2
  selector:
      matchLabels:
        app: appweb1
  template:
    metadata:
      labels:
        app: appweb1
    spec:
      containers:
      - name: appweb1
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appweb2
spec:
  replicas: 2
  selector:
      matchLabels:
        app: appweb2
  template:
    metadata:
      labels:
        app: appweb2
    spec:
      containers:
      - name: appweb2
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
