service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactest
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector: 
    app: reactest
