ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /app2
        backend:
          serviceName: appweb2
          servicePort: 80
      - path: /*
        backend:
          serviceName: appweb1
          servicePort: 80
